# raytracer

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: camera.h  color.h  hittable.h  hittable_list.h  image.h  material.h  point3.h  ray.h  sphere.h  utility.h  vec3.h  vector.h
src/: camera.c  color.c  hittable.c  hittable_list.c  main.c  material.c  point3.c  ray.c  sphere.c  utility.c  vec3.c  vector.c
